<resources>
    <string name="app_name">Golf</string>
    <string name="title_activity_gym_locations" translatable="false">Map</string>

    <string name="login">Login</string>
    <string name="email">Enter Your Email Address</string>
    <string name="password">Enter Your Password</string>
    <string name="reset">Forgot Your Password?</string>
    <string name="register">Register Now</string>

    
    <string-array name="language_array">
        <item>Swahili</item>
        <item>English</item>
    </string-array>

</resources>
