<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:gravity="center"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:hint="@string/email"
        android:textSize="18dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:background="@drawable/btn_sign_in_background"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/login"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:layout_marginTop="30dp"
        android:text="@string/reset"
        android:textColor="@android:color/black"
        android:textSize="18dp" />

</LinearLayout>